force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Allows_Reconfiguration__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Allows_Reconfiguration__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The field indicates if the the user is allowed to change the configuration associated with the System Configuration Record once it has been configured. If set to FALSE the configure button in the nCino Administration user interface will be disabled once the initial configuration is complete.</description>
    <label>Allows Reconfiguration</label>
    <type>Checkbox</type>
</CustomField>