force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The field indicates if the System Configuration record is active and should be displayed to the user in the nCino Administration user interface.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>