force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Is_Configured__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field indicates if the configuration associated with the System Configuration record has been done. If the field is set to TRUE the the user will not have the option in the nCino Administration interface to configure the data unless the &apos;Allows Reconfiguration&apos; field is set to to TRUE.</description>
    <label>Is Configured</label>
    <type>Checkbox</type>
</CustomField>