force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Is_Link__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field indicates if the link contained in the &apos;Link URL&apos; field should be displayed to the user.</description>
    <label>Is Link</label>
    <type>Checkbox</type>
</CustomField>