force-app/main/default/objects/nFORCE__System_Configuration__c/fields/nFORCE__Link_URL__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Link_URL__c</fullName>
    <description>The field is conditional and must be specified if the &apos;Is Link&apos; field is set to TRUE. The field contains the link that will be displayed to the user if the &apos;Is Link&apos; field is set to TRUE.</description>
    <label>Link URL</label>
    <type>Url</type>
</CustomField>